<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverRegistrationInfo">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/adam"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/driverName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:gravity="center"
        android:hint="@string/driverName"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/driverLastname"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:gravity="center"
        android:hint="@string/driverLastName"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverName" />

    <EditText
        android:id="@+id/driverEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:gravity="center"
        android:hint="@string/driverEmail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverLastname" />

    <EditText
        android:id="@+id/driverPhone"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:gravity="center"
        android:hint="@string/driverPhone"
        android:inputType="phone"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverEmail" />

    <ImageView
        android:id="@+id/driverProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverPhone"
        app:srcCompat="@drawable/plus" />

    <ImageView
        android:id="@+id/driverProfileCircle"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverPhone"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/driverIdentity"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverPhone"
        app:srcCompat="@drawable/plus" />

    <ImageView
        android:id="@+id/driverIdentityCircle"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverPhone"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/driverLicense"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverPhone"
        app:srcCompat="@drawable/plus" />

    <ImageView
        android:id="@+id/driverLicenseCircle"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverPhone"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/adam"
        android:text="@string/driverProfile"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverProfile" />

    <TextView
        android:id="@+id/identity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/adam"
        android:text="@string/driverID"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverIdentity" />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/adam"
        android:text="@string/driverLicense"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverLicense" />

    <ImageButton
        android:id="@+id/btnBG"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@null"
        android:onClick="next"
        android:scaleType="fitXY"
        android:src="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adam"
        android:text="@string/NEXT"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/adam"
        app:layout_constraintBottom_toBottomOf="@+id/btnBG"
        app:layout_constraintEnd_toEndOf="@+id/btnBG"
        app:layout_constraintStart_toStartOf="@+id/btnBG"
        app:layout_constraintTop_toTopOf="@+id/btnBG" />

</android.support.constraint.ConstraintLayout>