<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLogin">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/adam"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/driverUsername"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:gravity="center"
        android:hint="@string/driverUsername"
        android:inputType="text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/driverPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:gravity="center"
        android:hint="@string/driverPassword"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverUsername" />

    <ImageButton
        android:id="@+id/btnBG"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@null"
        android:onClick="next"
        android:scaleType="fitXY"
        android:src="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adam"
        android:text="@string/NEXT"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="@+id/btnBG"
        app:layout_constraintEnd_toEndOf="@+id/btnBG"
        app:layout_constraintStart_toStartOf="@+id/btnBG"
        app:layout_constraintTop_toTopOf="@+id/btnBG" />

</android.support.constraint.ConstraintLayout>